# compatflow

./: .gitignore  README.md  pyproject.toml
corpus/canonical/: parallel_tool_calls.json  single_tool_call.json
corpus/defects/: missing_tool_call_index.json  missing_type_first_chunk.json  parallel_index_collision.json  raw_tool_call_content.json
docs/: client-matrix.md  defect-seeds.md  failure-reduction.md  live-capture.md  related-work.md  research-scope.md  semantic-oracle.md  trace-format.md  trace-generation.md
experiments/vllm_16340/: README.md  STATUS.md  affected.json  fixed.json
src/compatflow/: __init__.py  cli.py  matrix.py  matrix_cli.py  oracle.py  reducer.py  reducer_cli.py  results.py  wire_oracle.py
src/compatflow/adapters/: __init__.py  accumulator.py  litellm.py  openai_node.py  openai_python.py
src/compatflow/capture/: __init__.py  cli.py  evaluate.py  evaluate_cli.py  models.py  recorder.py
src/compatflow/generator/: __init__.py  cli.py  semantics.py  variants.py
src/compatflow/node_client/: observe.mjs  package-lock.json  package.json
src/compatflow/replay/: __init__.py  app.py  ephemeral.py  models.py  server.py  sse.py  store.py
tests/: README.md
tests/integration/: test_capture.py  test_openai_adapter.py  test_server.py  test_variant_matrix.py
tests/unit/: test_accumulator.py  test_experiment_manifests.py  test_generator.py  test_models.py  test_oracle.py  test_reducer.py  test_sse.py  test_wire_oracle.py
