[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compatflow"
version = "0.1.0"
description = "Behavioral compatibility testing for streamed LLM tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

