[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compatflow"
version = "0.1.0"
description = "Behavioral compatibility testing for streamed LLM tool calls"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "uvicorn[standard]>=0.32,<1",
]

[project.scripts]
compatflow-replay = "compatflow.replay.server:main"

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "hypothesis>=6.120,<7",
  "pytest>=8.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
